# nylengine

./: .gitignore  README.md
renderer/: Cargo.toml
renderer/shaders/: pixel.hlsl  vertex.spv
renderer/src/: lib.rs  main.rs
renderer/src/pipeline/: app.rs  buffers.rs  commandbuffer.rs  framebuffer.rs  gfxpipeline.rs  image.rs  init.rs  instance.rs  material.rs  mesh.rs  mesh_data.rs  mod.rs  model.rs  prelude.rs  renderpass.rs  shaderloading.rs  shapes.rs  surface.rs  swapchain.rs  tests.rs  vertex.rs  window.rs
renderer/src/pipeline/shaders/: testshader.vs  vertex.hlsl  vertex.spv
renderer/tests/: materials.rs  shaderloading.rs  tests.rs
renderer/tests/common/: mod.rs
