[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
once_cell = "1.21.3"
rand = "0.9.2"
shaderc = "0.10.1"
thiserror = "2.0.17"
vulkano = {default-features = true}
winit = {default-features = true}
bytemuck = "1.23.2"

[profile.dev]
opt-level = 1

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"

[build]
rustflags = "-Aunused_imports"
